--- a/generador3D/generador3D.ui
+++ b/generador3D/generador3D.ui
@@ -62,7 +62,7 @@
    <item row="22" column="1">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Versión 0.0.9 BETA</string>
+      <string>Versión 0.0.10 BETA</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -170,7 +170,7 @@
    <item row="26" column="0" colspan="2">
     <widget class="QLabel" name="label_7">
      <property name="text">
-      <string>https://github.com/18turbo?tab=repositories</string>
+      <string>https://github.com/18turbo/Generador3DFreeCAD/</string>
      </property>
     </widget>
    </item>
