--- a/generador3D/generador3D.ui
+++ b/generador3D/generador3D.ui
@@ -33,7 +33,7 @@
      </property>
     </widget>
    </item>
-   <item row="24" column="0" colspan="2">
+   <item row="27" column="0" colspan="2">
     <widget class="QLabel" name="label_9">
      <property name="text">
       <string>Cree un boceto (sketch) para cada vista con la que desee generar un sólido 3D. Necesitará al menos 2 bocetos. Luego pinche en el icono del script y seleccione un boceto para cada vista. Luego pulse OK para generar el sólido.</string>
@@ -49,7 +49,7 @@
      </property>
     </widget>
    </item>
-   <item row="17" column="0">
+   <item row="20" column="0">
     <widget class="QCheckBox" name="checkBoxPlantaS">
      <property name="text">
       <string>Vista Lateral con salientes</string>
@@ -59,17 +59,17 @@
      </property>
     </widget>
    </item>
-   <item row="22" column="1">
+   <item row="25" column="1">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Versión 0.0.10 BETA</string>
+      <string>Versión 0.0.11 BETA</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
    </item>
-   <item row="16" column="0">
+   <item row="19" column="0">
     <widget class="QCheckBox" name="checkBoxFrontalS">
      <property name="text">
       <string>Vista Frontal con salientes</string>
@@ -136,64 +136,34 @@
      </widget>
     </widget>
    </item>
-   <item row="21" column="0" colspan="2">
+   <item row="24" column="0" colspan="2">
     <widget class="Line" name="line_5">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="23" column="0">
+   <item row="18" column="0" colspan="2">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Tipo de Generador 3D (DISPONIBLE EN FUTURAS VERSIONES):</string>
+     </property>
+    </widget>
+   </item>
+   <item row="26" column="0">
     <widget class="QLabel" name="label_8">
      <property name="text">
       <string>Información de Uso:</string>
      </property>
     </widget>
    </item>
-   <item row="17" column="1">
+   <item row="20" column="1">
     <widget class="QRadioButton" name="radioFusion">
      <property name="text">
       <string>Unión por Fusión</string>
      </property>
      <property name="checkable">
       <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="14" column="0" colspan="2">
-    <widget class="Line" name="line_6">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="26" column="0" colspan="2">
-    <widget class="QLabel" name="label_7">
-     <property name="text">
-      <string>https://github.com/18turbo/Generador3DFreeCAD/</string>
-     </property>
-    </widget>
-   </item>
-   <item row="18" column="0">
-    <widget class="QCheckBox" name="checkBoxLateralS">
-     <property name="text">
-      <string>Vista Planta con salientes</string>
-     </property>
-     <property name="checkable">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="16" column="1">
-    <widget class="QRadioButton" name="radioInterseccion">
-     <property name="text">
-      <string>Unión por Intersección</string>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -210,10 +180,67 @@
      </property>
     </spacer>
    </item>
-   <item row="15" column="0" colspan="2">
-    <widget class="QLabel" name="label_4">
+   <item row="17" column="0" colspan="2">
+    <widget class="Line" name="line_6">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="29" column="0" colspan="2">
+    <widget class="QLabel" name="label_7">
      <property name="text">
-      <string>Tipo de Generador 3D (DISPONIBLE EN FUTURAS VERSIONES):</string>
+      <string>https://github.com/18turbo/Generador3DFreeCAD/</string>
+     </property>
+    </widget>
+   </item>
+   <item row="21" column="0">
+    <widget class="QCheckBox" name="checkBoxLateralS">
+     <property name="text">
+      <string>Vista Planta con salientes</string>
+     </property>
+     <property name="checkable">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="19" column="1">
+    <widget class="QRadioButton" name="radioInterseccion">
+     <property name="text">
+      <string>Unión por Intersección</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_10">
+     <property name="text">
+      <string>Tolerancia:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="margin">
+      <number>10</number>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1">
+    <widget class="QDoubleSpinBox" name="tolerancia">
+     <property name="value">
+      <double>0.010000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
