--- a/generador3D/generador3D.ui
+++ b/generador3D/generador3D.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>489</width>
-    <height>751</height>
+    <height>793</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="19" column="1">
+   <item row="22" column="1">
     <widget class="QRadioButton" name="radioInterseccion">
      <property name="text">
       <string>Unión por Intersección</string>
@@ -46,28 +46,21 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <widget class="QDoubleSpinBox" name="tolerancia">
-     <property name="value">
-      <double>0.010000000000000</double>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="2">
+   <item row="29" column="0" colspan="2">
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="31" column="0">
+   <item row="37" column="0">
     <widget class="QLabel" name="label_11">
      <property name="text">
       <string>Documentación:</string>
      </property>
     </widget>
    </item>
-   <item row="32" column="0" colspan="2">
+   <item row="38" column="0" colspan="2">
     <widget class="QLabel" name="label_12">
      <property name="text">
       <string>https://github.com/18turbo/Generador3DFreeCAD/wiki</string>
@@ -131,30 +124,147 @@
      </widget>
     </widget>
    </item>
-   <item row="21" column="0">
-    <widget class="QCheckBox" name="checkBoxLateralS">
+   <item row="24" column="0">
+    <widget class="QCheckBox" name="checkBoxPlantaS">
      <property name="text">
       <string>Vista Planta con salientes</string>
      </property>
      <property name="checkable">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="20" column="0">
-    <widget class="QCheckBox" name="checkBoxPlantaS">
+   <item row="23" column="0">
+    <widget class="QCheckBox" name="checkBoxLateralS">
      <property name="text">
       <string>Vista Lateral con salientes</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="36" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="20" column="0" colspan="2">
+    <widget class="Line" name="line_6">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="27" column="0" colspan="2">
+    <widget class="Line" name="line_5">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="QCheckBox" name="meterVistasCarpeta">
+     <property name="text">
+      <string>Crear Carpeta Automáticamente para Vistas</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="32" column="0">
+    <widget class="QLabel" name="label_8">
+     <property name="text">
+      <string>Información de Uso:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="35" column="0" colspan="2">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>https://github.com/18turbo/Generador3DFreeCAD/</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="0">
+    <spacer name="verticalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="21" column="0" colspan="2">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Tipo de Generador 3D (DISPONIBLE EN FUTURAS VERSIONES):</string>
+     </property>
+    </widget>
+   </item>
+   <item row="31" column="1">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Versión 0.0.12 BETA</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="22" column="0">
+    <widget class="QCheckBox" name="checkBoxFrontalS">
+     <property name="text">
+      <string>Vista Frontal con salientes</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="23" column="1">
+    <widget class="QRadioButton" name="radioFusion">
+     <property name="text">
+      <string>Unión por Fusión</string>
      </property>
      <property name="checkable">
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="17" column="0" colspan="2">
-    <widget class="Line" name="line_6">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="33" column="0" colspan="2">
+    <widget class="QLabel" name="label_9">
+     <property name="text">
+      <string>Cree un boceto (sketch) para cada vista con la que desee generar un sólido 3D. Necesitará al menos 2 bocetos. Luego pinche en el icono del script y seleccione un boceto para cada vista. Luego pulse OK para generar el sólido.</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+     <property name="margin">
+      <number>5</number>
+     </property>
+     <property name="indent">
+      <number>-1</number>
      </property>
     </widget>
    </item>
@@ -171,105 +281,12 @@
      </property>
     </widget>
    </item>
-   <item row="24" column="0" colspan="2">
-    <widget class="Line" name="line_5">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="5" column="1">
+    <widget class="QDoubleSpinBox" name="tolerancia">
+     <property name="value">
+      <double>0.010000000000000</double>
      </property>
     </widget>
-   </item>
-   <item row="26" column="0">
-    <widget class="QLabel" name="label_8">
-     <property name="text">
-      <string>Información de Uso:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="29" column="0" colspan="2">
-    <widget class="QLabel" name="label_7">
-     <property name="text">
-      <string>https://github.com/18turbo/Generador3DFreeCAD/</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <spacer name="verticalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="18" column="0" colspan="2">
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>Tipo de Generador 3D (DISPONIBLE EN FUTURAS VERSIONES):</string>
-     </property>
-    </widget>
-   </item>
-   <item row="25" column="1">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Versión 0.0.11 BETA</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="19" column="0">
-    <widget class="QCheckBox" name="checkBoxFrontalS">
-     <property name="text">
-      <string>Vista Frontal con salientes</string>
-     </property>
-     <property name="checkable">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="20" column="1">
-    <widget class="QRadioButton" name="radioFusion">
-     <property name="text">
-      <string>Unión por Fusión</string>
-     </property>
-     <property name="checkable">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="27" column="0" colspan="2">
-    <widget class="QLabel" name="label_9">
-     <property name="text">
-      <string>Cree un boceto (sketch) para cada vista con la que desee generar un sólido 3D. Necesitará al menos 2 bocetos. Luego pinche en el icono del script y seleccione un boceto para cada vista. Luego pulse OK para generar el sólido.</string>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-     <property name="margin">
-      <number>5</number>
-     </property>
-     <property name="indent">
-      <number>-1</number>
-     </property>
-    </widget>
-   </item>
-   <item row="30" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
