--- a/generador3D/generador3D15.ui
+++ b/generador3D/generador3D15.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>495</width>
-    <height>809</height>
+    <height>840</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -23,7 +23,7 @@
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>760</y>
+     <y>797</y>
      <width>113</width>
      <height>17</height>
     </rect>
@@ -49,7 +49,7 @@
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>531</y>
+     <y>568</y>
      <width>461</width>
      <height>16</height>
     </rect>
@@ -62,7 +62,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>550</y>
+     <y>587</y>
      <width>191</width>
      <height>23</height>
     </rect>
@@ -122,7 +122,7 @@
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>737</y>
+     <y>774</y>
      <width>357</width>
      <height>17</height>
     </rect>
@@ -135,7 +135,7 @@
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>630</y>
+     <y>667</y>
      <width>217</width>
      <height>17</height>
     </rect>
@@ -166,24 +166,24 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>600</y>
-     <width>171</width>
+     <x>350</x>
+     <y>636</y>
+     <width>131</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Versión 0.0.15 BETA</string>
+    <string>0.0.16 BETA</string>
    </property>
    <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
    </property>
   </widget>
   <widget class="Line" name="line_5">
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>581</y>
+     <y>618</y>
      <width>461</width>
      <height>16</height>
     </rect>
@@ -196,7 +196,7 @@
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>783</y>
+     <y>820</y>
      <width>384</width>
      <height>17</height>
     </rect>
@@ -209,7 +209,7 @@
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>653</y>
+     <y>690</y>
      <width>471</width>
      <height>78</height>
     </rect>
@@ -253,6 +253,9 @@
       <width>70</width>
       <height>25</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <double>100000000.000000000000000</double>
     </property>
    </widget>
    <widget class="QListWidget" name="listWidgetFrontal">
@@ -349,6 +352,9 @@
       <height>25</height>
      </rect>
     </property>
+    <property name="maximum">
+     <double>100000000.000000000000000</double>
+    </property>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
@@ -403,6 +409,9 @@
       <width>70</width>
       <height>25</height>
      </rect>
+    </property>
+    <property name="maximum">
+     <double>100000000.000000000000000</double>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="offsetP">
@@ -463,6 +472,38 @@
      <string>Offset</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>638</y>
+     <width>121</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Versión:</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="ocultarVistas">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>530</y>
+     <width>441</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ocultar las vistas al generar el sólido</string>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
   </widget>
  </widget>
  <resources/>
